complete HW1 tasks

--- a/docker/upload-data.ipynb
+++ b/docker/upload-data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,16 +23,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.base.Connection at 0x2e59a005e20>"
+       "<sqlalchemy.engine.base.Connection at 0x235d815cad0>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,14 +43,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sarah\\AppData\\Local\\Temp\\ipykernel_22404\\1386532404.py:1: DtypeWarning: Columns (3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\sarah\\AppData\\Local\\Temp\\ipykernel_37856\\1386532404.py:1: DtypeWarning: Columns (3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv('green_tripdata_2019-10.csv')\n"
      ]
     }
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -456,14 +456,14 @@
      "text": [
       "\n",
       "CREATE TABLE taxi_data (\n",
-      "\t\"VendorID\" BIGINT, \n",
-      "\tlpep_pickup_datetime TIMESTAMP WITHOUT TIME ZONE, \n",
-      "\tlpep_dropoff_datetime TIMESTAMP WITHOUT TIME ZONE, \n",
+      "\t\"VendorID\" FLOAT(53), \n",
+      "\tlpep_pickup_datetime TEXT, \n",
+      "\tlpep_dropoff_datetime TEXT, \n",
       "\tstore_and_fwd_flag TEXT, \n",
-      "\t\"RatecodeID\" BIGINT, \n",
+      "\t\"RatecodeID\" FLOAT(53), \n",
       "\t\"PULocationID\" BIGINT, \n",
       "\t\"DOLocationID\" BIGINT, \n",
-      "\tpassenger_count BIGINT, \n",
+      "\tpassenger_count FLOAT(53), \n",
       "\ttrip_distance FLOAT(53), \n",
       "\tfare_amount FLOAT(53), \n",
       "\textra FLOAT(53), \n",
@@ -473,7 +473,7 @@
       "\tehail_fee FLOAT(53), \n",
       "\timprovement_surcharge FLOAT(53), \n",
       "\ttotal_amount FLOAT(53), \n",
-      "\tpayment_type BIGINT, \n",
+      "\tpayment_type FLOAT(53), \n",
       "\ttrip_type FLOAT(53), \n",
       "\tcongestion_surcharge FLOAT(53)\n",
       ")\n",
@@ -491,14 +491,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sarah\\AppData\\Local\\Temp\\ipykernel_22404\\3491851173.py:3: UserWarning: Pandas doesn't allow columns to be created via a new attribute name - see https://pandas.pydata.org/pandas-docs/stable/indexing.html#attribute-access\n",
+      "C:\\Users\\sarah\\AppData\\Local\\Temp\\ipykernel_37856\\3491851173.py:3: UserWarning: Pandas doesn't allow columns to be created via a new attribute name - see https://pandas.pydata.org/pandas-docs/stable/indexing.html#attribute-access\n",
       "  df.pep_pickup_datetime = pd.to_datetime(df.lpep_pickup_datetime)\n"
      ]
     }
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,7 @@
        "0"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,23 +542,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "inserted next chunk in 9.998 seconds\n",
-      "inserted next chunk in 9.650 seconds\n",
-      "inserted next chunk in 9.783 seconds\n"
+      "inserted next chunk in 10.646 seconds\n",
+      "inserted next chunk in 10.328 seconds\n",
+      "inserted next chunk in 11.751 seconds\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sarah\\AppData\\Local\\Temp\\ipykernel_22404\\3412845910.py:6: DtypeWarning: Columns (3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\sarah\\AppData\\Local\\Temp\\ipykernel_37856\\3412845910.py:6: DtypeWarning: Columns (3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = next(df_iter)\n"
      ]
     },
@@ -566,8 +566,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "inserted next chunk in 9.730 seconds\n",
-      "inserted next chunk in 6.653 seconds\n",
+      "inserted next chunk in 10.831 seconds\n",
+      "inserted next chunk in 7.072 seconds\n",
       "All chunks processed.\n"
      ]
     }
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +685,7 @@
        "4           5  Staten Island            Arden Heights    Boro Zone"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
        "265"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
